@@ -11,3 +11,5 @@ plug-ins/pygimp/plug-ins/gtkcons.py
 plug-ins/pygimp/plug-ins/foggify.py
 plug-ins/pygimp/plug-ins/palette-offset.py
 plug-ins/pygimp/plug-ins/palette-sort.py
+plug-ins/pygimp/plug-ins/palette-to-gradient.py
+plug-ins/pygimp/plug-ins/pdbbrowse.py
